Commit a new download to history db immediately on Android

If browser is killed when a download is just created, the
download is forever lost.
User can no longer resume the download.
And a temporary file is left forever on the disk.
On desktop platforms, this may not be a big issue as users
can easily go to the download dir to delete that file.
However, it is not very straight forward to access the file maanger.
This change commits the CreateDownload() to history db immediately on Android,
rather than waiting for the scheduled time interval.
This will greatly reduce the chance of the above problem, though
very unlikely possible.

BUG=636101

Review-Url: https://codereview.chromium.org/2292733002
Cr-Commit-Position: refs/heads/master@{#415334}

Former-commit-id: e8b7133f781db0fe40ba704b9655d16ba3c2be7e